# rust-neural-joint-SPX-VIX-calibration

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
src/: lib.rs  main.rs
src/calibration/: loss.rs  mod.rs  train.rs
src/market_data/: market_data.rs
src/math/: black_scholes.rs
src/nn/: adam.rs  mod.rs  network.rs  network_grad.rs  neural_func.rs
src/sde/: euler.rs  mod.rs  path.rs
src/vix/: mod.rs  qr.rs  vix.rs
tests/: test_black_scholes.rs
