[package]
name = "rust-neural-joint-SPX-VIX-calibration"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
rand = "0.9"
rand_distr = "0.5"  
argmin = { version = "0.10", features = ["serde1"] }
argmin-math = { version = "0.4", features = ["ndarray-v0_16-nalloc"] }
rayon = "1.10"
candle-core = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
special = "0.11"
quad-rs = "0.1"